# kplayer-plugin-show_filename

./: .gitignore  CMakeLists.txt  KPVideoShowFileNamePlugin.cpp  KPVideoShowFileNamePlugin.h
